--- a/blog.html
+++ b/blog.html
@@ -30,7 +30,7 @@
 			<h1>Carrot's Personal Blog</h1>
 			<div class="row">
 				<div class="narrow">
-				<img src="/images/profile.png" alt="Carrot Cake's profile picture with pizza slice emojis zooming into her big yawn mouth">
+				<img src="/images/profile.png" alt="Carrot Cake's profile picture with pizza slice emojis zooming into her big yawn mouth" width="72" height="72">
 				</div>
 			</div>
 			<div class="wide">
