--- a/blog.html
+++ b/blog.html
@@ -19,25 +19,36 @@
 	</head>
 	<body>
 <!--navigation-->
-		<nav class="blognav">
+		<nav class="nav">
   			<a href="index.html">Home</a>
-  			<a href="">Timeline</a>
-  			<a href="">Pictures</a>
+  			<!--<a href="">Timeline</a> might include someday-->
+  			<!--<a href="">Pictures</a> might include someday-->
   			<a href="blog.html">Carrot's Personal Blog</a>
 		</nav>
 <!--main-->	
 		<div id="contentWrapper">	
 			<h1>Carrot's Personal Blog</h1>
 			<div class="row">
-				<div class="narrow">
-				<img src="images/profile.png" alt="Carrot Cake's profile picture with pizza slice emojis zooming into her big yawn mouth" width="72" height="72">
+				<div class="column narrow">
+					<img class = "profile" src="images/profile.png" alt="Carrot Cake's profile picture with pizza slice emojis zooming into her big yawn mouth" width="72" height="72">
+				</div>
+				<div class="column wide">
+					<h2>Oct 11, 2022 | Six Years!!!</h2>
+						<p>It's finally fall, my favorite time of year. Summer always makes my ears itchy, and when it's cold and snowy in winter, my mom makes me wear boots for our walks. I don't like the boots. Fall is when I can find really good sticks and crunchy leaves on walks. Sometimes my mom makes me wear funny outfits, but I don't really mind. As long as I don't have to wear a hat. Or boots. Boots are the worst.</p>
+						<p>Fall also reminds me of meeting my mom for the very first time! It was early October of 2016 and my mom had been trying and trying to find a good fit for a first dog of her own. One day, she finally got an email about some Boston Terrier puppies who were going to need homes soon. When she came to meet me for the first time, I curled right up in her lap and knew that was going to be my favorite place in the world for a long time.</p>
+						<p>Apparently, my name was going to be Nancy, named after Nancy Drew, but my new family realized I didn't necessarily have the keen observation and critical thinking skills of the namesake, but I sure was sweet if not a little nutty.</p>
 				</div>
 			</div>
-			<div class="wide">
-				<h2>Oct 11, 2022 | Six Years!!!</h2>
-					<p>It's finally fall, my favorite time of year. Summer always makes my ears itchy, and when it's cold and snowy in winter, my mom makes me wear boots for our walks. I don't like the boots. Fall is when I can find really good sticks and crunchy leaves on walks. Sometimes my mom makes me wear funny outfits, but I don't really mind. As long as I don't have to wear a hat. Or boots. Boots are the worst.</p>
-					<p>Fall also reminds me of meeting my mom for the very first time! It was early October of 2016 and my mom had been trying and trying to find a good fit for a first dog of her own. One day, she finally got an email about some Boston Terrier puppies who were going to need homes soon. When she came to meet me for the first time, I curled right up in her lap and knew that was going to be my favorite place in the world for a long time.</p>
-					<p>Apparently, my name was going to be Nancy, named after Nancy Drew, but my new family realized I didn't necessarily have the keen observation and critical thinking skills of the namesake, but I sure was sweet if not a little nutty.</p>
+			<div class="row">
+				<div class="column narrow">
+					<img class = "profile" src="images/profile.png" alt="Carrot Cake's profile picture with pizza slice emojis zooming into her big yawn mouth" width="72" height="72">
+				</div>
+				<div class="column wide">
+					<h2>Oct 11, 2022 | Six Years!!!</h2>
+						<p>Someday I should write a review of my favorite toy, Orange Ball, but for today here's a pic of us:</p>
+						<img class="blogpic" src="images/blogpic.png" alt="Carrot Cake holding an orange ball the size of her head in her mouth" width="500">
+						<p><a href="https://www.chewy.com/chuckit-indoor-fumbler-dog-toy/dp/108804">Buy a new Orange Ball for me on Chewy!</a></p>
+				</div>
 			</div>
 		</div>
 	</body>
