--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 		<title>The Carrot Cake Scrapbook</title>
 		<style>
 			body {
-				background:#ea9cd2;
+				background:#ED65B3;
 				font-family: Roboto;
 				font-size:20px;
-				color:#012786;
+				color:#4b1f42;
 				margin: 0;
 			}
 		</style>
@@ -21,8 +21,8 @@
 <!--navigation-->
 		<nav class="nav">
   			<a href="index.html">Home</a>
-  			<a href="">Timeline</a>
-  			<a href="">Pictures</a>
+  			<!--<a href="">Timeline</a> might include someday-->
+  			<!--<a href="">Pictures</a> might include someday-->
   			<a href="blog.html">Carrot's Personal Blog</a>
 		</nav>
 <!--main-->	
