--- a/index.html
+++ b/index.html
@@ -28,8 +28,13 @@
 <!--main-->	
 		<div id="contentWrapper">	
 		<h1>The Carrot Cake Scrapbook</h1>
+		<div class="flex-container">
+			<div class="item">
 			<h2>Meet Carrot Cake</h2>
 				<p>Carrot Cake is a six-year-old Boston Terrier living in Madison, Wisconsin. Her friends describe her as loyal, quick-witted, and always ready for a party. Some of Carrot's favorite passtimes include playing fetch, chewing sticks, and stealing blankets. </p>
+				<img source="images/mainpic.png" alt="Carrot Cake lying on a couch looking off into the distance" width="300">
+			</div>
+			<div class="item">
 			<h2>Carrot Cake's Nicknames</h2>
 				<p>Carrot has earned herself many titles, some riffs on her legal name, some reflecting her personality or physical characteristics, and some that simply cannot be explained. It seems, though, that the name doesn't quite matter. If you speak in sweet tones and offer an ear rub, she'll respond to just about anything.</p>
 				<p>Her nicknames include, but are certainly not limited to:</p>
@@ -41,12 +46,13 @@
  					<li>Little Frog</li>
 					<li>Trash Dog</li>
 				</ul>
-			<article>
+			</div>
+			<div class="item">
 				<h2>Carrot's Latest Blog Post</h2>
 					<p>It's finally fall, my favorite time of year. Summer always makes my ears itchy, and when it's cold and snowy in winter, my mom makes me wear boots for our walks. I don't like the boots. Fall is when I can find really good sticks and crunchy leaves on walks. Sometimes my mom makes me wear funny outfits, but I don't really mind. As long as I don't have to wear a hat. Or boots. Boots are the worst.</p>
 					<p>Fall also reminds me of meeting my mom for the very first time! It was early October of 2016...</p>
 					<p>See <a href="blog.html">Carrot's Personal Blog</a> for the full article.</p>
-			</article>
+			</div>
 		</div>
 	</body>
 </html>
