--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 			<div class="item">
 			<h2>Meet Carrot Cake</h2>
 				<p>Carrot Cake is a six-year-old Boston Terrier living in Madison, Wisconsin. Her friends describe her as loyal, quick-witted, and always ready for a party. Some of Carrot's favorite passtimes include playing fetch, chewing sticks, and stealing blankets. </p>
-				<img source="images/mainpic.png" alt="Carrot Cake lying on a couch looking off into the distance" width="300">
+				<img src="images/mainpic.png" alt="Carrot Cake lying on a couch looking off into the distance" width="300">
 			</div>
 			<div class="item">
 			<h2>Carrot Cake's Nicknames</h2>
